--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- Sección Inicio -->
   <section id="inicio" class="hero">
     <div class="hero-content">
-      <h1>Bienvenida a mi portafolio profesional</h1>
+      <h1>Bienvenido a mi portafolio profesional</h1>
       <p>Contadora especializada en impuestos y auditoría.</p>
       <a href="#sobre-mi" class="btn">Conoce más sobre mí</a>
     </div>
